updates to main and hero content. adjusted posistioning and made mobile responsive

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <img src="pics/SeaTurt.jpg" alt="Sea Turtle"> <!-- nth-child(1)-->
             </section>
             <article class="imgContainer">
-                <img class="right top" src="pics/snapperTurt.jpg" alt="SnappingTurtle"> <!-- nth-child(2) flex-end -->
-                <img class="right top" src="pics/TurtApp.jpg" alt="TurtleOpenMouth"> <!-- nth-child(3) flex-end -->
-                <img class="right bottom" src="pics/printOuts.png" alt="PrintOuts"> <!-- nth-child(4) flex-wrap -->
-                <img class="right bottom" src="pics/Types-of-Tortoise.jpg" alt="Types-of-Tortoise"> <!-- nth-child(5) flex-wrap -->
+                <img class="img top" src="pics/snapperTurt.jpg" alt="SnappingTurtle"> <!-- nth-child(2) flex-end -->
+                <img class="img top" src="pics/TurtApp.jpg" alt="TurtleOpenMouth"> <!-- nth-child(3) flex-end -->
+                <img class="img bottom" src="pics/printOuts.png" alt="PrintOuts"> <!-- nth-child(4) flex-wrap -->
+                <img class="img bottom" src="pics/Types-of-Tortoise.jpg" alt="Types-of-Tortoise"> <!-- nth-child(5) flex-wrap -->
             </article>
         </section>
     </section>
